--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -51,3 +51,18 @@
 .submit-button:hover {
   background-color: #0056b3;
 }
+
+.text {
+  color: #333;
+}
+
+.button {
+  background-color: grey;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 16px;
+  margin-bottom: 25px;
+}
